# cove-narrator

./: .gitignore  README.md  build.ps1  handoff.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-03-cove-narrator-implementation.md
docs/superpowers/specs/: 2026-06-03-whooshy-design.md
packaging/: installer.iss
scripts/: _extract_hd_packages.py  _hd_clone_quality.py  _hd_clone_smoke.py  _hd_min_generate.py  _hd_token_diag.py  _hd_vocoder_diag.py  build-release.sh
src/: app.py  main.py  updater.py
src/data/: dictionary.py  phonemes.py
src/engine/: analyzer.py  audio_dsp.py  audio_features.py  clone_tts.py  tts.py  voice_blend.py
src/models/: loader.py
src/tabs/: clone_tab.py  custom_tab.py  reader_tab.py  simple_tab.py
src/utils/: audio_player.py  chrome.py  config.py  export.py  presets.py  settings_dialog.py  theme.py
tests/: test_analyzer.py  test_audio_dsp.py  test_audio_player.py  test_dictionary.py  test_export.py  test_loader.py  test_phonemes.py  test_presets.py  test_reader_epub.py  test_tts.py  test_updater_swap.py
