[project]
name = "cove-narrator"
version = "2.1.0"
description = "Offline TTS desktop app with phoneme-level voice building"
requires-python = ">=3.10"
dependencies = [
    "kokoro-onnx>=0.4.7",
    "onnxruntime>=1.20.1",
    "PySide6>=6.7",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=2.0",
    "librosa>=0.10",
]

[project.scripts]
cove-narrator = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
